<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyAn</string>
    <string name="creator_app">Victor Mota</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="try_again">Let\'s try that again</string>
    <string name="without_connection">
        You don\'t have internet connection right now, please connect to internet and try again.
    </string>
    <string name="logo_myAn">LogoMyAn</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="name_list">Name List</string>
    <string name="register">Register</string>
    <string name="register_list">Register List</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="search_anime_manga_movie">Search Anime/Manga or Movie</string>
    <string name="contact">Contact</string>
    <string name="today_anime">Today Anime</string>
    <string name="season_anime">Season</string>
    <string name="select_image">Select Image</string>
    <string name="top_anime">Top Anime</string>
    <string name="top_manga">Top Manga</string>
    <string name="episodes">Episodes: </string>
    <string name="episodes_">Episodes</string>
    <string name="episode">Episode : </string>
    <string name="year">Year: </string>
    <string name="status">Status</string>
    <string name="opening_themes">Opening Themes</string>
    <string name="ending_themes">Ending Themes</string>
    <string name="recommendations">Recommendations</string>
    <string name="lists">Lists</string>
    <string name="empty_personal_list">Create your first list</string>
    <string name="click_here">Click below to create one!</string>
    <string name="create_list">Create List</string>
    <string name="description_list">Description list</string>
    <string name="members">Members</string>
    <string name="licensors">Licensors</string>
    <string name="studios">Studios</string>
    <string name="more_informations">More Information? Click Here!</string>
    <string name="genres">Genres </string>
    <string name="anime">Anime</string>
    <string name="title">Title</string>
    <string name="title_synonyms">Title Synonyms</string>
    <string name="manga">Manga</string>
    <string name="volumes">Volumes: </string>
    <string name="chapters">Chapters: </string>
    <string name="adaptations">Adaptations: </string>
    <string name="author">Author: </string>
    <string name="spin_off">Spin-Off: </string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="highest_scores">Highest Scores </string>
    <string name="currently_airing">Currently Airing </string>
    <string name="completed">Completed </string>
    <string name="upcoming">Upcoming </string>
    <string name="see_more">See More!</string>
    <string name="result_null">(No Result For This Category)</string>
    <string name="type_year">Type, Year</string>
    <string name="ep_duration">Episode/Minute</string>
    <string name="character_name">Character Name</string>
    <string name="character_name_kanji">Character Name Kanji</string>
    <string name="person_name">Person Name</string>
    <string name="character_nickname">Nickname</string>
    <string name="given_name">Given Name: </string>
    <string name="family_name">Family Name: </string>
    <string name="person_birthday">Birthday: </string>
    <string name="alternatives_names">Alternatives Names</string>
    <string name="retry">Retry</string>
    <string name="anime_airing">Anime Airing</string>
    <string name="manga_airing">Manga Airing</string>
    <string name="picture">Picture</string>
    <string name="unknown">Unknown</string>
    <string name="movie">Movie</string>
    <string name="add_list">Add</string>
    <string name="remove_list">Remove</string>
    <string name="empty_list">Empty personal list? Create one here</string>
    <string name="message_error">Message Error</string>
    <string name="score">Score </string>
    <string name="rating">0.0</string>
    <string name="none">None</string>
    <string name="name_user">Name User</string>
    <string name="positive_dialog_message">Positive Message</string>
    <string name="negative_dialog_message">Negative message</string>
    <string name="image">Image</string>
    <string name="close">Close</string>
    <string name="warning_dialog_message">Warning Message</string>
    <string name="name_character">Name Character</string>
    <string name="text_about_music">
        Seu sorriso é tão resplandescente &lt;br /&gt;
        Que deixou meu coração alegre &lt;br /&gt;
        Me dê a mão &lt;br /&gt;
        Pra fugir desta terrível escuridão &lt;br /&gt;
        &lt;br /&gt;
        Desde o dia em que eu te reencontrei &lt;br /&gt;
        Me lembrei daquele lindo lugar &lt;br /&gt;
        Que na minha infância era &lt;br /&gt;
        Especial para mim &lt;br /&gt;
        &lt;br /&gt;
        Quero saber &lt;br /&gt;
        Se comigo você quer vir dançar &lt;br /&gt;
        Se me der a mão eu te levarei &lt;br /&gt;
        Por um caminho, cheio de sombras e de luz &lt;br /&gt;
        &lt;br /&gt;
        Você pode até não perceber &lt;br /&gt;
        Mas o meu coração se amarrou em você &lt;br /&gt;
        Que precisa de alguém &lt;br /&gt;
        Pra te mostrar o amor, que o mundo te dá &lt;br /&gt;
        &lt;br /&gt;
        Meu alegre coração palpita &lt;br /&gt;
        Por um universo de esperança &lt;br /&gt;
        Me dê a mão, a magia nos espera &lt;br /&gt;
        &lt;br /&gt;
        Vou te amar por toda a minha vida &lt;br /&gt;
        Vem comigo por este caminho &lt;br /&gt;
        Me de a mão pra fugir desta terrível escuridão &lt;br /&gt;
    </string>
    <string name="birthday">Birthday: </string>
    <string name="age">Age: </string>
    <string name="empty_anime">This list doesn\'t has anime yet</string>
    <string name="empty_manga">This list doesn\'t has manga yet</string>
    <string name="remove_from_list">Remove X Items From List</string>
    <string name="rank">Rank</string>
    <string name="volumes_chapters">Volumes/Chapters</string>
    <string name="background">Background</string>
    <string name="item">Item</string>
    <string name="carousel">Carousel Image</string>
    <string name="loading">Loading</string>
    <string name="empty_list_anime_manga">This section doesn\'t have anime/manga</string>
    <string name="name_personal_list">Personal List Name</string>
    <string name="description_personal_list">Personal List Description</string>
    <string name="name_item">Name Item</string>
    <string name="exit">Exit</string>
    <string name="not_found">Not found episode for this anime</string>
    <string name="life_universe_and_everything">42</string>
    <string name="aired">Aired : </string>
    <string name="aired_in" tools:ignore="TypographyDashes">1995–07-09</string>
    <string name="actor">Actor</string>
</resources>