<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:cardElevation="10dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:background="@color/placeholder"
            android:contentDescription="@string/actor" />
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        android:text="@string/character_name"
        android:textSize="18sp"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_kanji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toEndOf="@id/cardView"
        android:text="@string/character_name_kanji"
        android:textSize="14sp"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/given_name_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_kanji"
        app:layout_constraintStart_toEndOf="@id/cardView"
        android:text="@string/character_name_kanji"
        android:textSize="14sp"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/given_name_shimmer"
        app:layout_constraintStart_toEndOf="@id/cardView"
        android:text="@string/birthday"
        android:textSize="14sp"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/birthday"
        app:layout_constraintStart_toEndOf="@id/cardView"
        android:text="@string/age"
        android:textSize="14sp"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView"
        android:text="@string/alternatives_names"
        android:textSize="14sp"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_about_music"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname" />
</androidx.constraintlayout.widget.ConstraintLayout>