<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:cardElevation="10dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:background="@color/placeholder"
            android:contentDescription="@string/anime" />
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        android:background="@color/placeholder"
        android:text="@string/rank"
        android:textSize="14sp"
        android:textColor="@color/placeholder"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_rank_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_text_rank"
        app:layout_constraintStart_toStartOf="@id/view_text_rank"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/rating"
        android:background="@color/placeholder"
        android:textColor="@color/placeholder" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_text_rank_rating"
        app:layout_constraintStart_toStartOf="@id/view_text_rank_rating"
        android:text="@string/score"
        android:background="@color/placeholder"
        android:textSize="14sp"
        android:textColor="@color/placeholder" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_score_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_text_score_rating"
        app:layout_constraintStart_toStartOf="@id/view_text_score_rating"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/placeholder"
        android:background="@color/placeholder"
        android:text="@string/rating" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view_text_score"
        app:layout_constraintTop_toBottomOf="@id/view_text_score"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/placeholder"
        android:background="@color/placeholder"
        android:text="@string/author" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_authors_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_text_authors"
        app:layout_constraintStart_toStartOf="@id/view_text_authors"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/placeholder"
        android:background="@color/placeholder"
        android:text="@string/creator_app" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/title"
        android:background="@color/placeholder" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_text_title_synonyms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/placeholder"
        android:background="@color/placeholder"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_text_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/title_synonyms" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_genres"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="@color/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_text_title_synonyms"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"/>
    <View
        android:id="@+id/view_youtube"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/linear_genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/placeholder" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_licensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_youtube"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/licensors_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensors"
            android:textColor="@color/placeholder"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:background="@color/placeholder" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/linear_licensors"
        app:layout_constraintStart_toStartOf="@id/guideline">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/view_text_studios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/linear_licensors"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:text="@string/studios"
            android:textColor="@color/placeholder"
            android:background="@color/placeholder"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>