<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_gray"
    tools:context=".screens.personDetail.OverviewPersonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:cardElevation="10dp">
            <ImageView
                android:id="@+id/person_image"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:background="@color/black_gray"
                android:contentDescription="@string/anime"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/cardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/given_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/given_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/family_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/family_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/person_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/person_birthday"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/alternatives_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/cardView"
            android:text="@string/alternatives_names"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/linear_expandable_text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/alternatives_names"
            app:layout_constraintStart_toStartOf="@id/alternatives_names"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <include
                android:id="@+id/expandable_text_view_about"
                layout="@layout/expandable_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>