<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_warning"
        app:civ_border_width="4dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_dialog"
        android:contentDescription="@string/image" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/warning_dialog_message"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:strokeColor="@color/white"
        app:cornerRadius="20dp"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_close"
        android:background="@drawable/circle_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_dialog" />
</androidx.constraintlayout.widget.ConstraintLayout>