<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/without_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".screens.WithoutConnectionActivity">

    <ImageButton
        android:id="@+id/img_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_refresh"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_try_again"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
    />

    <TextView
        android:id="@+id/text_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:text="@string/try_again"
        android:gravity="center"
    />

    <TextView
        android:id="@+id/text_without_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/text_try_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:text="@string/without_connection"
        android:gravity="center"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_without_connection"
        android:layout_margin="20dp"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/circle_btn"
    />
</androidx.constraintlayout.widget.ConstraintLayout>